# dotconfig

./: .bashrc  .gitignore  .vimrc  README.md  arch-install.sh  config.fish  declare_substitutes  deploy  deploy_mac  git-package-install.sh  packages.txt  pkgdb.json  xcape_mapping.sh
User/: keybindings.json
User/History/-11295fa9/: 0Wvx.ts  1TrH.ts  3kGO.ts  4XPJ.ts  8nvS.ts  Aatv.ts  AkJD.ts  LnSu.ts  Xx7f.ts  YXf1.ts  ZPTf.ts  entries.json  h3aC.ts  jRb9.ts  nf9n.ts  sZlR.ts  usuv.ts  wAbb.ts  ycYB.ts
User/History/-11b3e6b5/: JftX.graphql  t1TO.graphql
User/History/-11b9ec72/: 0CnS.ts  entries.json  w9b2.ts
User/History/-1211c2e6/: 7Ixb.graphql  MVnD.graphql  PjK8.graphql  c24s.graphql  entries.json  kJ1t.graphql  rjhi.graphql  xA0O.graphql
User/History/-12177548/: 1vkW.ts  3Pk0.ts  CH23.ts  CvZf.ts  Q85I.ts  SAKz.ts  entries.json
User/History/-122760ef/: fJBO.ts  fqok.ts
User/History/-129babb4/: Zgvx.ts  entries.json
User/History/-1303214b/: OGaR.js
User/History/-1305b78f/: 2NVg.ts  6w6H.ts  79Lq.ts  8TNf.ts  A8Vb.ts  Bby1.ts  JDtB.ts  Oqb3.ts  QCBt.ts  entries.json  gxUj.ts  l52d.ts  tVNq.ts  yGGd.ts
User/History/-132f14bf/: 24Wj.ts  TOca.ts  rFXy.ts
User/History/-13609b1/: Db6n.ts  hOAE.ts
User/History/-137a28e/: 7Fpa.tsx  GCQX.tsx  INjG.tsx  ULFk.tsx  eCbM.tsx  uZYO.tsx  wgPw.tsx
User/History/-14154835/: ds8E.ts  fjFb.ts
User/History/-14ac55a9/: entries.json
User/History/-1547bfb7/: Cs4S.ts  dI31.ts  entries.json  o6gL.ts  tPt4.ts  yrMV.ts  yrVh.ts
User/History/-155a2227/: 5KMv.js  ASG9.js
User/History/-15c8cd09/: WS4X.tsx
User/History/-16065e93/: 82JS.ts  INef.ts  P2LH.ts  ShSQ.ts  fd95.ts
User/History/-16e59b34/: 6OYm.graphql  I3Pk.graphql  entries.json
User/History/-176adc34/: 2P5L.tsx  4sbr.tsx  6HUY.tsx  8sXr.tsx  FWuO.tsx  H0f5.tsx  H1N5.tsx  J5kh.tsx  JDY7.tsx  JIQO.tsx  RMoN.tsx  VBdX.tsx  X751.tsx  d49D.tsx  d95T.tsx  gVyo.tsx  h1mx.tsx  k417.tsx  mLMW.tsx  wmeM.tsx  yjwZ.tsx
User/History/-17825902/: entries.json
User/History/-187dba3a/: w61q.ts
User/History/-18cfc6d3/: R6SS.ts  entries.json
User/History/-18dc8b51/: BFQZ.graphql  DZKh.graphql  QT3s.graphql  VroL.graphql  apWe.graphql
User/History/-18f2d1f8/: entries.json
User/History/-1969f546/: 2YtN.ts  8fXF.ts  9zMD.ts  CHj1.ts  Hc2R.ts  TDe6.ts  UJ4D.ts  UUAU.ts  ZPp1.ts  aTNA.ts  cvOF.ts  d6OD.ts  entries.json  h2Vr.ts  iv4Y.ts  j9xH.ts  m0yb.ts  nKbJ.ts  oVK1.ts  orku.ts  xMsy.ts  zqXI.ts
User/History/-19b0fe90/: 4HyV.json  lASA.json
User/History/-1a557b52/: QyZW.ts  fth8.ts  zIJY.ts
User/History/-1a56b1df/: tZzg.ts
User/History/-1a9b42c4/: 3YuS.html  entries.json
User/History/-1ab69c0b/: 2qkd.ts  DGkl.tsx  EqA9.ts  WNGn.tsx  xuGS.tsx
User/History/-1b2af11a/: Ms3L.graphql  W248.graphql  yyfn.graphql
User/History/-1b3a7b67/: 1SaD.ts  6Q5U.ts  8iC3.ts  A9NA.ts  CxZD.ts  E755.ts  F83x.ts  SrWm.ts  TyXk.ts  U1J4.ts  Uvx8.ts  VcPr.ts  YwBQ.ts  b84c.ts  liyr.ts  n1tI.ts  otXc.ts  t0fT.ts  zjEK.ts
User/History/-1b4a18/: cGLz.graphql
User/History/-1bf9bb25/: 06b8.tsx  0bLO.tsx  0cHC.tsx  0rQS.tsx  1PAO.tsx  60RY.tsx  CSQL.tsx  Cy5H.tsx  EWks.tsx  HtzT.tsx  MS45.tsx  RbTZ.tsx  RgQt.tsx  a1Vo.tsx  e55e.tsx  nBMg.tsx  oaha.tsx  qBQW.tsx  xHx0.tsx  yObw.tsx  yRM6.tsx
User/History/-1c297a21/: LiqY.md  entries.json
User/History/-1c672d4a/: 3c9i.tsx  5WKr.tsx  6lyR.tsx  Dg2p.tsx  DlKW.tsx  E4ND.tsx  Gv8O.tsx  K0eo.tsx  OZ7N.tsx  QRIM.tsx  RSp2.tsx  WNC7.tsx  ZDgj.tsx  dvgG.tsx  entries.json  lUaT.tsx  u3k6.tsx  x9f9.tsx  ymIw.tsx  zRlY.tsx
User/History/-1caf6c26/: entries.json  i7Ip.graphql  uGxs.graphql  zZgD.graphql
User/History/-1cf34e0/: eFcj.ts  entries.json
User/History/-1e785c1f/: TSoK.ts  (+2 more)
User/History/57ca7924/: aKHr.bazel  entries.json
User/globalStorage/: state.vscdb  storage.json
blender/: startup.blend
eww/: README.md  deploy  eww-daemon  log.txt  trigger
eww/src/: eww.yuck
nushell/: config.nu  env.nu  history.txt
polybar/: colors.ini  modules.ini
polybar/scripts/: pulseaudio-control.bash
rofi/: deploy
rofi/src/: launcher.sh  window_switcher.sh
scripts/: build_id3_json  create_album_id3_tags  eww_trigger  focus_or_open  get_certificate  git-package-install.sh  hyprlog  mastodon_upgrade.sh  minecraft_resources.py  omf-install.sh  open-qr  open-yt  pomo  record
scripts/raurman/: Cargo.toml
scripts/window-order/: README.md
spicetify/: config.ini
src/: .bashrc  .oh-my-posh.nu  .vimrc  rss.opml
src/.arduino15/: arduino-cli.yaml
src/.config/: starship.toml
src/.librewolf/: librewolf.overrides.cfg
src/User/: settings.json
src/blender/: userpref.blend
src/server/: timedrestart.timer
src/urserver/: deploy_remotes.sh
startpage/: index.html
vivaldi/: mod.css
vsc/: keybindings.json  settings.json
(+5435 files in other folders)
